--- a/Frontend2/package.json
+++ b/Frontend2/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-sass": "^4.2.0",
     "node-sass": "^5.0.0",
